# innovation

./: .dockerignore  .env.example  .env.microservices.example  .env.prod  .env.prod.example  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .vercelignore  CLEANUP_AUDIT.md  CLEANUP_SUMMARY.md  DOCS_INNOVATION.md  Dockerfile  ESTRUTURA_ATUALIZADA.md  EVALUATION.md  FINAL_REPORT.md  GEMINI.md  INICIAR_INNOVATION.bat  LICENSE  MASTERPLAN.md  MODULES.md  OPTIMIZATION_PLAN.md  PLANO_DE_CONTINUIDADE.md  PROJECT_SUMMARY_FOR_CLAUDE.md  QUICKSTART.md  README.md  RENDER_DEPLOY_REPORT.md  SECURITY.md  TECH_STACK.md  TODO.md  TODO_ANTI_ROBO_PRINT.md  TODO_BLACKBOX_SECURITY.md  TODO_FINANCE_JS.md  TODO_FIX_LOGIN_FETCH.md  TODO_MIGRATE_TS_ARCH.md  TODO_SIGNUP.md  TODO_SUBSCRIPTIONS.md  TODO_WHATSAPP.md  VERCEL_DEPLOY_GUIDE.md  (+93 more)
innovation/innovation/: pyproject.toml  requirements.txt
innovation/innovation/alembic/: env.py
innovation/innovation/app/: main.py
innovation/innovation/app/api/: applications.py  auth.py  companies.py  documents.py  jobs.py  payments.py  plans.py
innovation/innovation/app/core/: config.py  dependencies.py  security.py
innovation/innovation/app/db/: seeds.py  session.py
innovation/innovation/app/models/: application.py  company.py  document.py  job.py  plan.py  user.py
innovation/innovation/app/schemas/: auth.py  payment.py
innovation/innovation/app/services/: ai_service.py  document_service.py  pdf_service.py  two_factor_service.py
innovation/innovation/backend/: main.py
innovation/innovation/innovation/: .gitignore
(+17403 files in other folders)
