[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innovation-ia"
version = "0.1.0"
description = "Innovation SaaS - local dev package"
readme = "README_SETUP.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
